# quadrature

./: .gitignore  Cargo.toml  README.md  RELEASE.md
.github/workflows/: docs.yml  run-tests.yml  style-checks.yml
examples/: print_available_quadratures.rs
simplex_rules/: generate_rust_simplex_rules.py
src/: gauss_jacobi.rs  lib.rs  simplex_rule_definitions.rs  simplex_rules.rs
src/duffy/: quadrilateral.rs  triangle.rs  triangle_quadrilateral.rs
src/simplex_rules/: generate_rust_simplex_rules.py
